feat: 프로젝트 상세 페이지 수정
- css 파일 분리
- 리스트로 돌아가기 버튼 추가

--- a/project.html
+++ b/project.html
@@ -5,35 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>김나영 포트폴리오</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/project.css" />
     <link
       rel="stylesheet"
       href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css"
     />
-    <style>
-      /* Toast UI Editor Viewer 글자 색상 변경 */
-      .toastui-editor-contents {
-        color: white !important;
-      }
-      .toastui-editor-contents h1,
-      .toastui-editor-contents h2,
-      .toastui-editor-contents h3,
-      .toastui-editor-contents h4,
-      .toastui-editor-contents h5,
-      .toastui-editor-contents h6,
-      .toastui-editor-contents p,
-      .toastui-editor-contents li,
-      .toastui-editor-contents a {
-        color: white !important;
-      }
-      .toastui-editor-contents code {
-        color: #f8f8f8 !important;
-        background-color: #333 !important;
-      }
-      .toastui-editor-contents blockquote {
-        border-left-color: #727fde !important;
-        color: #cccccc !important;
-      }
-    </style>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <img class="image-gradient" src="images/gradient.png" alt="gradient" />
@@ -62,6 +42,9 @@
       <main>
         <div class="content">
           <section class="my-project">
+            <a href="./projects.html" class="back-button">
+              <i class="bx bx-arrow-back"></i> 프로젝트 목록으로 돌아가기
+            </a>
             <div id="viewer"></div>
           </section>
         </div>
