docs: 프로젝트 정보 업데이트

--- a/projects.html
+++ b/projects.html
@@ -39,17 +39,18 @@
         <div class="content">
           <section class="my-projects">
             <h1 class="section-title">My Projects 👩‍💻</h1>
+            
+            <!-- 프로젝트 1 -->
             <div class="project-card">
               <div class="project-imgbox">
-                <img src="images/sample.png" alt="sample" />
+                <img src="images/project1.png" alt="project1.png" />
               </div>
               <div class="project-info">
                 <h2>
-                  Project <span class="gradient">Sample1</span>
+                  <span class="gradient">주식 투자</span> 정보 플랫폼
                 </h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Quisquam, quos.
+                  AI 추천 기반 국내 주식 투자 정보 제공
                 </p>
                 <button
                   class="btn-project"
@@ -67,14 +68,35 @@
               </div>
               <div class="project-info">
                 <h2>
-                  Project <span class="gradient">Sample2</span>
+                  기업 홈페이지 <span class="gradient">리뉴얼</span>
                 </h2>
                 <p>
-                  두 번째 프로젝트에 대한 간략한 설명입니다.
+                  기존 홈페이지 디자인 개편 및 성능 개선
                 </p>
                 <button
                   class="btn-project"
                   onclick="window.location.href='project.html?id=project2'"
+                >
+                  <i class="bx bx-link-external"></i> View Project
+                </button>
+              </div>
+            </div>
+            
+            <!-- 프로젝트 3 -->
+            <div class="project-card">
+              <div class="project-imgbox">
+                <img src="images/sample.png" alt="sample" />
+              </div>
+              <div class="project-info">
+                <h2>
+                  리모델링 지원 서비스 - <span class="gradient">열교 딥러닝</span>
+                </h2>
+                <p>
+                  구조체 정보 조회 기능 및 딥러닝 모델 연동
+                </p>
+                <button
+                  class="btn-project"
+                  onclick="window.location.href='project.html?id=project3'"
                 >
                   <i class="bx bx-link-external"></i> View Project
                 </button>
