fix: 특정 크기에서 프로젝트 리스트가 안보이는 현상 해결

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
               </div>
               <div class="project-info">
                 <h2><span class="gradient">주식 투자</span> 정보 플랫폼</h2>
-                <p>AI 추천 기반 국내 주식 투자 정보 제공</p>
+                <p>AI 추천 기반 국내 주식 투자 정보 제공 및 시각화</p>
                 <button
                   class="btn-project"
                   onclick="window.location.href='project.html?id=project1'"
@@ -68,7 +68,7 @@
               </div>
               <div class="project-info">
                 <h2>기업 홈페이지 <span class="gradient">리뉴얼</span></h2>
-                <p>기존 홈페이지 디자인 개편 및 성능 개선</p>
+                <p>기존 홈페이지 디자인 개편 및 LightHouse 지표 개선</p>
                 <button
                   class="btn-project"
                   onclick="window.location.href='project.html?id=project2'"
