refactor: change project2,3 image

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
             <div class="project-card">
               <div class="project-imgbox">
                 <a href="project.html?id=project2">
-                  <img src="images/sample.png" alt="sample" />
+                  <img src="images/project2.png" alt="project2" />
                 </a>
               </div>
               <div class="project-info">
@@ -82,7 +82,7 @@
             <div class="project-card">
               <div class="project-imgbox">
                 <a href="project.html?id=project3">
-                  <img src="images/sample.png" alt="sample" />
+                  <img src="images/project3.png" alt="project3.png" />
                 </a>
               </div>
               <div class="project-info">
